# optithor

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
compound_db_builder/: build_compound_db.py  db_state.py  io_json.py  pubchem_cache.py  step_01_extract_seeds.py  step_02_expand_hydrates.py  step_03_fetch_pubchem.py  step_04_build_parquet.py
compound_db_builder/raw_seeds/: compounds_with_biological_roles.json  initial_compounds.xlsx
compound_db_builder/tmp/: tmp_01_raw_seed_names.json  tmp_02_extended_names.json  tmp_02c_only_missing_names.json  tmp_03_pubchem_calls_cache.json  tmp_03_pubchem_raw_last_run.json
examples/: basic-usage.py  fetch_and_reload.py
src/optithor/: __about__.py  __init__.py  compound_db.py  config.py  errors.py  lp_solver.py  medium_optimizer.py  paths.py  pubchem_client.py  reports.py  types.py  utils.py
src/optithor/resources/: compound_db.parquet
tests/: compound_db_report.py
