[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "optithor"
version = "0.1.0"
description = "Linear-programming–based optimization of microbial growth media under elemental stoichiometric constraints."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Haroun Taki Eddine Bensaadi", email = "hte.bensaadi@gmail.com" }
]

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "numpy==2.2.1",
  "pandas==2.2.3",
  "pyarrow>=15.0.0",
  "scipy==1.15.0",
  "chempy==0.9.0",
  "quantities==0.16.1",
  "aiohttp==3.11.11",
  "openpyxl==3.1.5",
]

[project.urls]
Homepage = "https://github.com/harounbensaadi/optithor"
Repository = "https://github.com/harounbensaadi/optithor"
Issues = "https://github.com/harounbensaadi/optithor/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/optithor"]

[tool.hatch.build.targets.sdist]
include = [
  "src/optithor/**",
  "README.md",
  "LICENSE",
]

[tool.hatch.build.targets.wheel.force-include]
"src/optithor/resources/compound_db.parquet" = "optithor/resources/compound_db.parquet"

[tool.hatch.build]
exclude = [
  "/compound_db_builder",
  "*.ipynb",
  "/tmp",
  "/output",
  "/raw_seeds",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = []
